--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wizard",
+  "name": "nezuko",
   "version": "1.0.0",
   "description": "Multi device whatsapp bot by Ajmal",
   "main": "starter.js",
